<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FinishActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_finish_exercise"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorPrimary" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/exercise_end"
            android:textColor="@color/white"
            android:background="#CC115311"
            android:padding="8dp"
            android:textSize="24sp"
            android:textStyle="bold"/>


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24sp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/green_tick_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/congratulations"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/exercise_completed"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:backgroundTint="#CC115311"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>